--- a/views/layout.erb
+++ b/views/layout.erb
@@ -105,9 +105,8 @@
       --> 
     </section>
     </section>
-  </footer>
-
-
+    </footer>
+    <center>&copy; BlazingCloud - San Francisco, CA, USA  </center>
   </body>
 </html>
 
