--- a/public/responsive/small/landscape.css
+++ b/public/responsive/small/landscape.css
@@ -1,13 +1,15 @@
-.debug {
-background:blue;
-}
-.branding {
-  height:27em;
-}
-.brand-solid-texture {
-  height:19em;
-}
-.branding .mobiles {
-  background-image:url('/images/branding/mobiles-480.png');
-  height:13em;
+@media screen and (min-width:30em) and (max-width:48em) {
+  .debug {
+    background:blue;
+  }
+  .branding {
+    height:27em;
+  }
+  .brand-solid-texture {
+    height:19em;
+  }
+  .branding .mobiles {
+    background-image:url('/images/branding/mobiles-480.png');
+    height:13em;
+  }
 }
