--- a/public/responsive/base-wide.css
+++ b/public/responsive/base-wide.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:48em) {
 .grid .tile {
   width:49%;
   margin-left:0.5%;
@@ -98,4 +99,4 @@ nav.cloud li {
   float:left;
   margin-right:1em;
 }
-
+}
