preparing to remove media attr

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,23 +19,28 @@
     <!-- small devices -->
     <link rel="stylesheet" 
           href="responsive/base-small.css"  
-          media='screen and (min-width:20em) and (max-width:48em) ' />
+          media='screen and (min-width:20em) and (max-width:48em) ' 
+          />
     <!-- small landscape device -->
     <link rel="stylesheet" 
           href="responsive/small/landscape.css"  
-          media='screen and (min-width:30em) and (max-width:48em) ' />
+          media='screen and (min-width:30em) and (max-width:48em) ' 
+          />
     <!-- wide devices -->
     <link rel="stylesheet" 
           href="responsive/base-wide.css"  
-          media='screen and (min-width:48em)' />
+          media='screen and (min-width:48em)' 
+          />
     <!-- wide tablet device -->
     <link rel="stylesheet" 
           href="responsive/wide/tablet.css"  
-          media='screen and (min-width:48em) and (max-width:64em)' />
+          media='screen and (min-width:48em) and (max-width:64em)' 
+          />
     <!-- wide desktop device -->
     <link rel="stylesheet" 
           href="responsive/wide/desktop.css" 
-          media='screen and (min-width:64em)' />
+          media='screen and (min-width:64em)' 
+          />
 
   </head>
 
