--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <%= erb(:google_tracking) %>
+    <script src="modernizr.js"></script>
     <meta charset="utf-8">
     <title><%= @title %></title>
     <meta name="description" content="">
@@ -9,13 +10,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="responsive/grid.css">
-    
     <!-- default grid - expect this to get adjusted for different devices-->
     <link rel="stylesheet" href="responsive/grid.css">
-    <!-- default device-->
+    <!-- default device is basic mobile-->
     <link rel="stylesheet" 
           href="responsive/base.css">
+    <!--
+
+        IE doesn't support media queries 
+
+        We are tuning this into IE desktop
+        mode by enabling base-wide over
+        base and wide/desktop for IE browser
+        less than IE 9
+
+        We do nothing for IEMobile as
+        the base.css is written for small
+        form devices without media-query
+        support already
+
+    -->
+    <!--[if !IEMobile]>
+      <link rel="stylesheet" href="responsive/base-wide.css" media="all"/>
+      <link rel="stylesheet" href="responsive/wide/desktop.css" media="all" />
+    <![endif]-->
+    <![if false]>
     <!-- small devices -->
     <link rel="stylesheet" 
           href="responsive/base-small.css"  
@@ -41,48 +60,16 @@
           href="responsive/wide/desktop.css" 
           media='screen and (min-width:64em)' 
           />
-
+    <![endif]>
   </head>
 
   <body class="<%=@pagename.to_s%>">
     <%=yield%>
   <footer>
     <section class='bottom grid'>
-      <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
+    <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'></div>
         <section>
-        <!--
-    <article class='tile'>
-    <em class='title'> Services </em>
-    <ol>
-      <li>Strategy &amp; Design</li>
-      <li>Mobile Apps</li>
-      <li>Mobile Websites</li>
-      <li>Convergent Experiences</li>
-    </ol>
-    </article>
-    <article class='tile'>
-    <em class='title'> Classes </em>
-    <ol>
-      <li><time class='date'>Mar23</time>
-      <a href="#">CSS for Web Applications</a></li>
-      <li><time class='date'>May21</time>
-      <a href="#">Rails for Beginners</a></li>
-      <li><time class='date'>June 3</time>
-      <a href="#">Prosidy Chat and you</a></li>
-    </ol>
-    </article>
-    <article class='tile'>
-    <em class='title'> Blog </em>
-    <ol>
-      <li><time class='date'>On Thursday</time>
-      <a href="#">Closure and Sinatra</a></li>
-      <li><time class='date'>Last Week</time>
-      <a href="#">Closure and JQuery Dom Manipulation</a></li>
-    </ol>
-      
-    </article>
-    -->
-    <article class='tile'>
+        <article class='tile'>
     <em class='title'> Contact </em>
       <ol>
         <li>
@@ -96,22 +83,10 @@
         </li>
       </ol>
       </article>
-      <!--
-    <article class='tile'>
-    <em class='title'> Twitter </em>
-      <time>On Friday</time>
-      <p>
-        @mebukar there's a link on the eventbrite page,
-  but it is small &dash;&dash;&gt; blazing cloud scholarship application
-  http://t.co/330yW1Pe
-      </p>
-      <a  href="#">Follow us</a> 
-      </article>
-      --> 
-    </section>
+        </section>
     </section>
     </footer>
-    <center>&copy; BlazingCloud - San Francisco, CA, USA  </center>
+    <div><center>&copy; BlazingCloud - San Francisco, CA, USA  </center></div>
   </body>
 </html>
 
