--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -22,24 +22,24 @@
   <section class='main grid'>
     <section class='about'>
     <article class='tile first'>
-    <p>
+      <p>
         <em class='title'>Blazing Cloud</em> 
         is a design, strategy, and
         development
         studio specializing
         in mobile product development.
-        </p>
-      </article>
-      <article class='tile last'>
+      </p>
+    </article>
+    <article class='tile last'>
       <p>
       <em class='title'>Want to talk about your project?</em>
       <br/>
       <a href="mailto:info@blazingcloud.net">Email us.</a>
       </p>
-      </article>
-      </section> <!-- about section -->
-        <hr class='underline'/>
-      <section class='grid strategy'>
+    </article>
+    </section> <!-- about section -->
+      <hr class='underline'/>
+    <section class='grid strategy'>
         <article class='tile'>
         <em class='title'>Strategy &amp; Design</em>
         <p>
@@ -86,7 +86,7 @@
               <li><span class='date'>May21</span>
                 <a href="#">Rails for Beginners</a></li>
             </ol>
-            </section>  <!---- upcoming -->
+            </section>   upcoming -->
         </article>
         <article class='tile'>
           <em class='title'>Talks</em>
@@ -103,7 +103,7 @@
               <li><span class='date'>Mar23</span>
                 <a href="#">Sarah Allen - Mobile is Everything</a></li>
             </ol>
-            </section> <!---- previous -->
+            </section> previous -->
         </article>
         </section> <!-- community -->
       </section> <!-- main section -->
