--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,8 +13,7 @@
     <!-- default grid - expect this to get adjusted for different devices-->
     <link rel="stylesheet" href="responsive/grid.css">
     <!-- default device is basic mobile-->
-    <link rel="stylesheet" 
-          href="responsive/base.css">
+    <link rel="stylesheet" href="responsive/base.css">
     <!--
 
         IE doesn't support media queries 
@@ -38,55 +37,55 @@
     <!-- small devices -->
     <link rel="stylesheet" 
           href="responsive/base-small.css"  
-          media='screen and (min-width:20em) and (max-width:48em) ' 
+          media='screen and (min-width:320px) and (max-width:768px) ' 
           />
     <!-- small landscape device -->
     <link rel="stylesheet" 
           href="responsive/small/landscape.css"  
-          media='screen and (min-width:30em) and (max-width:48em) ' 
+          media='screen and (min-width:480px) and (max-width:768px) ' 
           />
     <!-- wide devices -->
     <link rel="stylesheet" 
           href="responsive/base-wide.css"  
-          media='screen and (min-width:48em)' 
+          media='screen and (min-width:768px)' 
           />
     <!-- wide tablet device -->
     <link rel="stylesheet" 
           href="responsive/wide/tablet.css"  
-          media='screen and (min-width:48em) and (max-width:64em)' 
+          media='screen and (min-width:768px) and (max-width:1024px)' 
           />
     <!-- wide desktop device -->
     <link rel="stylesheet" 
           href="responsive/wide/desktop.css" 
-          media='screen and (min-width:64em)' 
+          media='screen and (min-width:1024px)' 
           />
     <![endif]>
   </head>
 
   <body class="<%=@pagename.to_s%>">
     <%=yield%>
-  <footer>
-    <section class='bottom grid'>
-    <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'></div>
-        <section>
-        <article class='tile'>
-    <em class='title'> Contact </em>
-      <ol>
-        <li>
-        E info@blazingcloud.net
-        </li>
-        <li>
-        P (415) 800 8085
-        </li>
-        <li>
-        F (415) 738 5407
-        </li>
-      </ol>
-      </article>
-        </section>
-    </section>
+    <footer>
+      <section class='bottom grid'>
+      <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'></div>
+          <section>
+            <article class='tile'>
+            <em class='title'> Contact </em>
+            <ol>
+              <li>
+              E info@blazingcloud.net
+              </li>
+              <li>
+              P (415) 800 8085
+              </li>
+              <li>
+              F (415) 738 5407
+              </li>
+            </ol>
+            </article>
+          </section>
+          <div class='copyright'>&copy; BlazingCloud - San Francisco, CA, USA</div>
+      </section>
     </footer>
-    <div><center>&copy; BlazingCloud - San Francisco, CA, USA  </center></div>
   </body>
 </html>
 
