--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -50,7 +50,7 @@
           to meet your goals.
           </p>
         </article>
-        <article class='tile'>
+        <article class='tile' position="center">
           <em class='title'>
             Mobile Apps
           </em>
@@ -69,7 +69,7 @@
         </section> <!-- services -->
       <hr class='underline'/>
       <section class='grid community '>
-        <article class='tile'>
+        <article class='tile' position='left'>
         <em class='title'>Blazing Cloud Training</em>
         <img class='leader' src="/images/home/training.png" alt='blazing cloud training'/>
         <p>
@@ -88,7 +88,7 @@
             </ol>
             </section>   upcoming -->
         </article>
-        <article class='tile'>
+        <article class='tile' position='right'>
           <em class='title'>Talks</em>
           <img class='leader' src="/images/home/talks.png" alt='blazing cloud talks'/>
           <p>
