--- a/views/layout.erb
+++ b/views/layout.erb
@@ -69,16 +69,15 @@
       <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'></div>
           <section>
             <article class='tile'>
-            <em class='title'> Contact </em>
             <ol>
               <li>
-              E info@blazingcloud.net
+              <span>E mail</span> info@blazingcloud.net
               </li>
               <li>
-              P (415) 800 8085
+              <span>Phone</span> (415) 800-8085
               </li>
               <li>
-              F (415) 738 5407
+              <span>Fax</span> (415) 738-5407
               </li>
             </ol>
             </article>
