--- a/public/responsive/wide/tablet.css
+++ b/public/responsive/wide/tablet.css
@@ -4,8 +4,8 @@
 
 .branding .mobiles {
   background-image:url('/images/branding/mobiles-full.png');
-  height:404px;
   background-position: 72% 0;
+  height: 404px;
 }
 
 .branding {
@@ -74,3 +74,13 @@ nav.cloud {
 .bottom-logo {
   background-position: 29%;
 }
+
+@media screen and (max-width: 960px) {
+  .branding .mobiles {
+    background-size: contain;
+  } 
+  .brand-cloud-logo {
+    background-position: 40% 0;
+  } 
+}
+
