--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,8 +38,19 @@
     <link rel="stylesheet" 
           href="responsive/base-small.css"  
           media='screen and (min-width:320px) and (max-width:768px) ' 
-          />
+          />    
+    <!-- small portrait device -->
+    <link rel="stylesheet"
+          href="responsive/small/portrait.css"
+          media='screen and (max-width:320px)'
+        />
+      
     <!-- small landscape device -->
+    <link rel="stylesheet" 
+          href="responsive/small/smaller_landscape.css"  
+          media='screen and (min-width:320px) and (max-width:480px) '
+          />
+    
     <link rel="stylesheet" 
           href="responsive/small/landscape.css"  
           media='screen and (min-width:480px) and (max-width:768px) ' 
