--- a/public/responsive/small/landscape.css
+++ b/public/responsive/small/landscape.css
@@ -2,12 +2,26 @@
 background:blue;
 }
 
- .brand-solid-texture {
+.brand-solid-texture {
   height: 396px;
 }
+
+
 .branding .mobiles {
   background-size: contain;
   background-image:url('/images/branding/mobiles-728.png');
   height: 316px;
   margin-left: 3%;
+}
+
+@media screen and (max-width:600px) {
+  .brand-solid-texture {
+    height: 347px;
+    top: 124px;
+  }
+  
+  .branding .mobiles {
+    height: 217px;
+  }
+  
 }
