--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -41,7 +41,7 @@
       <hr class='underline'/>
     <section class='grid strategy'>
         <article class='tile'>
-        <em class='title'>Strategy &amp; Design</em>
+        <em class='title' position="left">Strategy &amp; Design</em>
         <p>
           We believe mobile is not just a device, 
           but a paradigm shift. Mobile requires a new perspective. We
@@ -60,7 +60,7 @@
           devices &mdash; iPhone, iPad, Android phones and
           tablets, and Windows Touch devices.</p>
         </article>
-        <article class='tile'>
+        <article class='tile' position="right">
         <em class='title'> Mobile Websites </em>
         <p>
           Research shows that mobile internet traffic
