--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html>
   <head>
     <%= erb(:google_tracking) %>
@@ -36,40 +36,28 @@
     <![if false]>
     <!-- small devices -->
     <link rel="stylesheet" 
-          href="responsive/base-small.css"  
+          href="responsive/small.css"  
           media='screen and (min-width:320px) and (max-width:768px) ' 
           />    
-    <!-- small portrait device -->
-    <link rel="stylesheet"
-          href="responsive/small/portrait.css"
-          media='screen and (max-width:320px)'
-        />
-      
-    <!-- small landscape device -->
+
+    <!-- small portrait device -->      
     <link rel="stylesheet" 
-          href="responsive/small/smaller_landscape.css"  
+          href="responsive/small/portrait.css"  
           media='screen and (min-width:320px) and (max-width:480px) '
           />
-    
-    <link rel="stylesheet" 
-          href="responsive/small/landscape.css"  
-          media='screen and (min-width:480px) and (max-width:768px) ' 
-          />
+
     <!-- wide devices -->
     <link rel="stylesheet" 
-          href="responsive/base-wide.css"  
+          href="responsive/wide.css"  
           media='screen and (min-width:768px)' 
           />
+    
     <!-- wide tablet device -->
     <link rel="stylesheet" 
           href="responsive/wide/tablet.css"  
           media='screen and (min-width:768px) and (max-width:1024px)' 
           />
-    <!-- wide desktop device -->
-    <link rel="stylesheet" 
-          href="responsive/wide/desktop.css" 
-          media='screen and (min-width:1024px)' 
-          />
+
     <![endif]>
   </head>
 
