--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -7,8 +7,11 @@ body {
   color:rgb(50,50,50);
   min-width:20em;
 }
+
 a { color: rgb(226,143,86);}
+
 a:hover  { color: rgb(226,143,86); }
+
 a.active { color: rgb(124,63,9); text-decoration:underline; }	
 
 /* 
@@ -49,6 +52,7 @@ body .main {
   z-index:1000;
   position:relative;
 }
+
 .bottom-logo {
   background-image:url('/images/logo/only-shadow.png');
   background-repeat:no-repeat;
@@ -56,6 +60,7 @@ body .main {
   width:inherit;
   height:72px;
 }
+
 .brand-solid-texture {
   background:url('/images/branding/texture.png') repeat center center transparent;
   height:17em;
@@ -175,7 +180,7 @@ footer {
   color:rgb(250,250,250);
   font-weight:bold;
   clear:both;
-  min-height:19em;
+  min-height:160px;
   background: url('/images/textures/stone.png');
   margin-top:13em;
 }
@@ -258,7 +263,7 @@ footer {
 }
 
 footer section.bottom {
-  height: 376px;
+  height: 160px;
   font-weight: normal;
 }
 
@@ -268,4 +273,5 @@ footer section.bottom {
   bottom: 0px;
   text-align: center;
   margin-bottom: 21px;
+  margin-top: 21px;
 }
