--- a/public/responsive/small.css
+++ b/public/responsive/small.css
@@ -1,9 +1,7 @@
-.debug {
-  background:#181818;
-}
 
 body .main {
   padding-left: 4.5%;
+  width: 94%;
 }
 
 nav.cloud {
@@ -49,6 +47,17 @@ nav.cloud {
   padding-left: 18px;
 }
 
+.branding .mobiles {
+  background-size: contain;
+  background-image:url('/images/branding/mobiles-728.png');
+  height: 316px;
+  margin-left: 3%;
+}
+
+.brand-solid-texture {
+  height: 398px;
+}
+
 .services .tile .leader {
   margin-bottom: 3em; /* hack to make the image longer so the text doesn't wrap */
 }
@@ -57,7 +66,7 @@ nav.cloud {
   padding-right: 11px;
   height: 20px;
   margin: 13px 0 auto;
-  width: 167px; /* this value will need to be changed for more words in the nav */
+  width: 194px; /* this value will need to be changed for more words in the nav */
   margin-top:13px;
   position: absolute;
   right: 1px;
@@ -80,7 +89,7 @@ nav.cloud li {
 .about .tile {
   width: 45%;
   margin-right: 0px;
-  margin-bottom: 27px;
+  margin-bottom: 31px;
 }
 
 .about .last {
@@ -102,8 +111,8 @@ nav.cloud li {
 }
 
 .strategy .tile[position="center"] {
-  padding-right: 25px;
-  padding-left: 18px;
+  padding-right: 4.5%;
+  padding-left: 3.4%;
 }
 
 .community .tile {
@@ -114,7 +123,7 @@ nav.cloud li {
 }
 
 .community .tile[position="left"] {
-  padding-right: 6%;
+  padding-right: 7.5%;
 }
 
 .tile .leader {
@@ -153,10 +162,20 @@ footer {
 @media screen and (max-width:600px) {
   body .main {
     padding-left: 7%;
+    width: 92%;
   }
     
   .brand-cloud-logo {
     background: 0;
+  }
+  
+  .brand-solid-texture {
+    height: 347px;
+    top: 124px;
+  }
+  
+  .branding .mobiles {
+    height: 217px;
   }
   
   .branding {
@@ -175,6 +194,9 @@ footer {
     position: inherit;
     margin: auto;
     margin-top: 7px;
+    width: 170px;
+    padding-right: 0px;
+    padding-left: 3%;
   }
   
   .home .logo {
@@ -220,7 +242,7 @@ footer {
   }
   
   .tile .leader {
-    width: 66%;
+    width: 71%;
     margin-top: 3px;
     float: none;
   }
@@ -230,7 +252,7 @@ footer {
     background-image: url("/images/logo/only-shadow.png");
     background-position: 53% 60%;
   }
-  
+    
   .bottom .tile {
     text-align: center;
     width: 93%;
@@ -238,6 +260,14 @@ footer {
   
   footer {
     margin-top: 172px;
+  }
+  
+  footer section.bottom {
+    height: 220px;
+  }
+  
+  .community .tile[position="left"] {
+      padding-right: 10%;
   }
 }
 
