--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,8 +19,8 @@
         IE doesn't support media queries 
 
         We are tuning this into IE desktop
-        mode by enabling base-wide over
-        base and wide/desktop for IE browser
+        mode by enabling wide over
+        base for IE browser
         less than IE 9
 
         We do nothing for IEMobile as
@@ -30,8 +30,7 @@
 
     -->
     <!--[if !IEMobile]>
-      <link rel="stylesheet" href="responsive/base-wide.css" media="all"/>
-      <link rel="stylesheet" href="responsive/wide/desktop.css" media="all" />
+      <link rel="stylesheet" href="responsive/wide.css" media="all"/>
     <![endif]-->
     <![if false]>
     <!-- small devices -->
@@ -40,7 +39,7 @@
           media='screen and (min-width:320px) and (max-width:768px) ' 
           />    
 
-    <!-- small portrait device -->      
+    <!-- small portrait devices -->      
     <link rel="stylesheet" 
           href="responsive/small/portrait.css"  
           media='screen and (min-width:320px) and (max-width:480px) '
@@ -52,7 +51,7 @@
           media='screen and (min-width:768px)' 
           />
     
-    <!-- wide tablet device -->
+    <!-- wide tablet devices -->
     <link rel="stylesheet" 
           href="responsive/wide/tablet.css"  
           media='screen and (min-width:768px) and (max-width:1024px)' 
