--- a/public/responsive/small/portrait.css
+++ b/public/responsive/small/portrait.css
@@ -59,7 +59,7 @@ section .strategy .tile[position="center"] {
 }
 
 .community .tile[position="right"] {
-  margin-top: 70px;
+  margin-top: 0px;
 }
 
 footer {
@@ -74,14 +74,12 @@ footer {
   }
   
   .community .tile {
-    margin-top: 19px;
-    padding: 0;
     width: 90%;
   }
   
   .about .tile {
     width: 80%;
-  }
+  }  
 }
 
 @media screen and (max-width: 320px) {
@@ -134,6 +132,10 @@ footer {
   
   .about article.first{
     width: 97%;
+  }
+  
+  .community .tile[position="right"] {
+    margin-top: 60px;
   }
   
   section.strategy .tile{
